tests/paczka1/small_fuzzy/20455100.err
Error in line 8: aEiUcDP1jMN S231 35,0
Error in line 12: 8qC A791 75,5
